--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ a.button:focus {
     hh = h / 2,
     
     opts = {
-        strings: [ 'HAPPY', 'BIRTHDAY!','TANISHQA PUNIA' ],
+        strings: [ 'HAPPY', 'BIRTHDAY!','TANISHQA','PUNIA' ],
         charSize: 30,
         charSpacing: 35,
         lineHeight: 40,
